# boutiques

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  __version__.py  cleanup_tests.sh  dataHandler.py  descriptor.schema.json  hermes.json  json_generator.rb  localExec.py  puller.py  pyproject.toml  requirements.txt  run_all_env_tests.sh  searcher.py  setup.py  tox.ini  validator.rb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-etst.md  bug-report.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug-report.md  feature-request.md  new-feature.md  typo.md
.github/workflows/: codespell.yml  style.yml  tests.yml  update_precommit_hooks.yml
.pytest_cache/v/cache/: nodeids
bids-apps/: README.md  template.json
boutiques/: __init__.py  __version__.py  _version.py  bids.py  bosh.py  boshParsers.py  conftest.py  creator.py  dataHandler.py  deprecate.py  descriptor2func.py  evaluate.py  exporter.py  importer.py  invocationSchemaHandler.py  localExec.py  logger.py  nexusHelper.py  prettyprint.py  publisher.py  puller.py  searcher.py  test.py  validator.py  zenodoHelper.py
boutiques/neurolinks-template/: tool.json
boutiques/schema/: README.md  descriptor.schema.json
boutiques/schema/examples/: README.md
boutiques/templates/: basic.json  bids-app.json  ordered_keys_desc.json
boutiques/tests/: BaseTest.py  README.md  boutiques_mocks.py  test_bids.py  test_bosh.py  test_crash_python3.py  test_creator.py  test_data_collection.py  test_data_handler.py  test_deprecate.py  test_evaluate.py  test_example.py  test_example1.py  test_example2.py  test_example3.py  test_example_flag.py  test_exec.py  test_export.py  test_import.py  test_invocation.py  test_logger.py  test_output_files.py  test_pprint.py  test_prepare.py  test_publisher.py  test_pull.py  test_pythoninterface.py  test_requires_group.py  test_search.py  test_simulate.py  test_styx.py  test_test.py  test_validator.py
boutiques/tests/bids/: bids_good.json
boutiques/tests/example_flag/: i4.json  (+1 more)
boutiques/util/: utils.py
cb-boutiques/: README.md  cb-boutiques.rb  lib-ruby
cb-boutiques/cbrain-templates/: bourreau_tool.rb.erb  portal_tool.rb.erb  view_show_params.html.erb.erb  view_task_params.html.erb.erb
docs/: argparse_docs.py  conf.py  index.rst  pythonApi.rst
docs/_templates/: index.rst
examples/: Dockerfile  Getting Started with Boutiques.ipynb  README.md  fsl_bet.json
examples/bids-app/: README.md
examples/configuration-file/: config.json  config.sh
examples/custom-properties/: custom.json
examples/enum/: enum.json  enum.sh
examples/example1/: Dockerfile  example1.json  exampleTool1  exampleTool2  invocation.json
examples/exececution-data/: execution-record.json
examples/execution-data/: execution-record.json
examples/list/: list.json  list.sh
examples/output-file/: output.json  output.sh
examples/output-flag-separator/: output-flag.json  output-flag.sh
json-editor/: json-editor.html
lib-ruby/: README.md  tool_creator.rb  tool_descriptor.rb  tool_input.rb  tool_input_output.rb  tool_output.rb  tool_templates.rb
schema/: README.md  descriptor.schema.json
sphinx/_templates/: cli.rst
tools/: CONTRIBUTING.md  Getting Started with Boutiques.ipynb  README.md  docker2singularity.sh  invocationSchemaHandler.py  localExec.py  validator.rb
tools/boutiques/: setup.py
tools/pegasus/: README.md  dockerapp.py
tools/python/: MANIFEST.in  README.rst  cleanup_tests.sh  config.txt  creator_output.json  creatordev.py  cwl_inv_out.json  cwl_out.json  example.conf  hello.tar  install_coveralls.sh  instructions_to_push.md  log-4.txt  log-FileValue.txt  out.json  output.json  requirements.txt  requirements_py26.txt  setup.py  stdout.txt  test-created-argparse-descriptor.json  test-created-argparse-inputs.json  testing.py
tools/ruby/: Gemfile
tools/sphinx/: _create.rst  _execute.rst  _publish.rst  _pull.rst  _test.rst  argparse_docs.py  bosh.rst  code.rst  conf.py  create.rst  data.rst  evaluate.rst  example.rst  execute.rst  exporter.rst  importer.rst  index.rst  invocation.rst  pprint.rst  publish.rst  pull.rst  search.rst  test.rst  validate.rst
(+416 files in other folders)
